--- a/strands_perception_people_msgs/CMakeLists.txt
+++ b/strands_perception_people_msgs/CMakeLists.txt
@@ -20,11 +20,10 @@ find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 #######################################
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  VisualOdometry.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -34,10 +33,10 @@ find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ###################################
 ## catkin specific configuration ##
