--- a/visual_odometry/package.xml
+++ b/visual_odometry/package.xml
@@ -44,11 +44,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
+  <build_depend>strands_perception_people</build_depend>
   <run_depend>libeigen3-dev</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>strands_perception_people</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
