Remove absolute paths from install files. Might work now. Still not tested with catkin.

--- a/ground_hog/package.xml
+++ b/ground_hog/package.xml
@@ -44,10 +44,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>strands_perception_people_msgs</build_depend>
+  <build_depend>strands_perception_people_3rd_party</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>strands_perception_people_msgs</run_depend>
+  <run_depend>strands_perception_people_3rd_party</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
