--- a/ground_hog/CMakeLists.txt
+++ b/ground_hog/CMakeLists.txt
@@ -5,6 +5,7 @@ project(ground_hog)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs sensor_msgs strands_perception_people_msgs)
+find_package(3rdparty REQUIRED strands_perception_people_3rd_party)
 
 ## Include Qt
 find_package(Qt4 REQUIRED COMPONENTS QtCore QtGui)
@@ -67,7 +68,7 @@ catkin_package(
 # include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
-  /home/mitzel/Desktop/sandbox/groundHOG_v1.1_b/cudaHOG
+  ${3rdparty_INCLUDE_DIRS}/libcudaHOG
   
 )
 
@@ -76,14 +77,14 @@ include_directories(
 #   src/${PROJECT_NAME}/groundHOG.cpp
 # )
 
-LINK_DIRECTORIES(/home/mitzel/Desktop/sandbox/groundHOG_v1.1_b/cudaHOG)
+#LINK_DIRECTORIES(/home/mitzel/Desktop/sandbox/groundHOG_v1.1_b/cudaHOG)
 
 ## Declare a cpp executable
 add_executable(groundHOG src/main.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(groundHOG strands_perception_people_msgs_generate_messages_cpp strands_perception_people_msgs_gencpp)
+add_dependencies(groundHOG strands_perception_people_msgs_generate_messages_cpp strands_perception_people_msgs_gencpp strands_perception_people_3rd_party) #TODO: might need a fake 3rdparty message to make sure it is built?!
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(groundHOG
@@ -91,7 +92,7 @@ add_dependencies(groundHOG strands_perception_people_msgs_generate_messages_cpp 
    ${QT_LIBRARIES}
    ${QT_QTCORE_LIBRARY}
    ${QT_QTGUI_LIBRARY}
-   cudaHOG
+   ${3rdparty_LIBRARIES}
  )
 
 #############
