--- a/strands_perception_people_msgs/CMakeLists.txt
+++ b/strands_perception_people_msgs/CMakeLists.txt
@@ -23,9 +23,11 @@ find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 add_message_files(
   FILES
   VisualOdometry.msg
-  Detections.msg
+  GroundHOGDetections.msg
   UpperBodyDetector.msg
   GroundPlane.msg
+  PedestrianTracking.msg
+  PedestrianTrackingArray.msg
 )
 
 ## Generate services in the 'srv' folder
