Bug fix. Whole file will be changed anyways. So just made it work for the moment.

--- a/strands_perception_people_3rd_party/CMakeLists.txt
+++ b/strands_perception_people_3rd_party/CMakeLists.txt
@@ -7,8 +7,8 @@ project(strands_perception_people_3rd_party)
 find_package(catkin REQUIRED)
 
 catkin_package(
-  INCLUDE_DIRS libcudaHOG/include
-  LIBRARIES cudaHOG
+#  INCLUDE_DIRS libcudaHOG/include
+#  LIBRARIES cudaHOG
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
