--- a/3rd_party/libcudaHOG/pkgconfig/cudaHOG.pc.in
+++ b/3rd_party/libcudaHOG/pkgconfig/cudaHOG.pc.in
@@ -1,5 +1,5 @@
 prefix=@CMAKE_INSTALL_PREFIX@
-exec_prefix=\${prefix}
+exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 includedir=${prefix}/include/cudaHOG
 
