Renaming to prevent ambiguities.

--- a/strands_ground_hog/package.xml
+++ b/strands_ground_hog/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>ground_hog</name>
+  <name>strands_ground_hog</name>
   <version>0.0.0</version>
   <description>The ground_hog package</description>
 
