--- a/strands_upper_body_detector/CMakeLists.txt
+++ b/strands_upper_body_detector/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(upper_body_detector)
+project(strands_upper_body_detector)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
