No publishing the location of the found pedestrians and the distances to them including the minimal distance to the next found person. Also publishing a marker array for visualisation purposes.

--- a/strands_perception_people_msgs/CMakeLists.txt
+++ b/strands_perception_people_msgs/CMakeLists.txt
@@ -4,7 +4,7 @@ project(strands_perception_people_msgs)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
+find_package(catkin REQUIRED COMPONENTS message_generation std_msgs geometry_msgs)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -28,6 +28,7 @@ add_message_files(
   GroundPlane.msg
   PedestrianTracking.msg
   PedestrianTrackingArray.msg
+  PedestrianLocations.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -41,6 +42,7 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
 )
 
 ###################################
