--- a/strands_upper_body_detector/package.xml
+++ b/strands_upper_body_detector/package.xml
@@ -20,6 +20,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>strands_perception_people_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
 
   <run_depend>roscpp</run_depend>
@@ -27,6 +28,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>strands_perception_people_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>libqt4-dev</run_depend>
 
   <export/>
