--- a/strands_upper_body_detector/package.xml
+++ b/strands_upper_body_detector/package.xml
@@ -22,6 +22,7 @@
   <build_depend>strands_perception_people_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
+  <build_depend>image_transport</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -30,6 +31,7 @@
   <run_depend>strands_perception_people_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>libqt4-dev</run_depend>
+  <run_depend>image_transport</run_depend>
 
   <export/>
 </package>
