--- a/strands_ground_hog/package.xml
+++ b/strands_ground_hog/package.xml
@@ -21,6 +21,7 @@
   <build_depend>strands_perception_people_msgs</build_depend>
   <build_depend>message_filters</build_depend>
   <build_depend>libqt4-dev</build_depend>
+  <build_depend>image_transport</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
@@ -28,6 +29,7 @@
   <run_depend>strands_perception_people_msgs</run_depend>
   <run_depend>message_filters</run_depend>
   <run_depend>libqt4-dev</run_depend>
+  <run_depend>image_transport</run_depend>
 
   <export/>
 </package>
