--- a/strands_pedestrian_tracking/package.xml
+++ b/strands_pedestrian_tracking/package.xml
@@ -22,6 +22,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>strands_perception_people_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
+  <build_depend>image_transport</build_depend>
 
   <run_depend>message_filters</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -30,6 +31,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>strands_perception_people_msgs</run_depend>
   <run_depend>libqt4-dev</run_depend>
+  <run_depend>image_transport</run_depend>
 
   <export/>
 </package>
