--- a/strands_visual_odometry/package.xml
+++ b/strands_visual_odometry/package.xml
@@ -20,12 +20,14 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>strands_perception_people_msgs</build_depend>
+  <build_depend>image_transport</build_depend>
 
   <run_depend>eigen</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>strands_perception_people_msgs</run_depend>
+  <run_depend>image_transport</run_depend>
 
   <export/>
 </package>
