--- a/strands_pedestrian_localisation/CMakeLists.txt
+++ b/strands_pedestrian_localisation/CMakeLists.txt
@@ -74,7 +74,7 @@ add_executable(pedestrian_localisation src/main.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(pedestrian_localisation strands_perception_people_msgs_generate_messages_cpp strands_perception_people_msgs_gencpp)
+add_dependencies(pedestrian_localisation ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(pedestrian_localisation
