--- a/strands_pedestrian_tracking/CMakeLists.txt
+++ b/strands_pedestrian_tracking/CMakeLists.txt
@@ -85,7 +85,7 @@ add_executable(pedestrian_tracking src/main.cpp src/Camera.cpp src/ConfigFile.cp
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(pedestrian_tracking strands_perception_people_msgs_generate_messages_cpp strands_perception_people_msgs_gencpp)
+add_dependencies(pedestrian_tracking ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(pedestrian_tracking
