--- a/strands_head_orientation/package.xml
+++ b/strands_head_orientation/package.xml
@@ -47,6 +47,7 @@
   <build_depend>message_filters</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>strands_perception_people_msgs</build_depend>
+  <build_depend>ros_datacentre_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -54,7 +55,7 @@
   <run_depend>message_filters</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>strands_perception_people_msgs</run_depend>
-
+  <run_depend>ros_datacentre_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
