Saving robot pose together with people locations.

--- a/strands_perception_people_utils/CMakeLists.txt
+++ b/strands_perception_people_utils/CMakeLists.txt
@@ -8,8 +8,10 @@ find_package(PkgConfig REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
   eigen
   eigen_conversions
+  geometry_msgs
   nav_msgs
   roscpp
+  ros_datacentre
   sensor_msgs
   std_msgs
   strands_perception_people_msgs
