--- a/strands_perception_people_utils/package.xml
+++ b/strands_perception_people_utils/package.xml
@@ -42,8 +42,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>eigen</build_depend>
   <build_depend>eigen_conversions</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>ros_datacentre</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>strands_perception_people_msgs</build_depend>
@@ -51,8 +53,10 @@
   <build_depend>tf_conversions</build_depend>
   <run_depend>eigen</run_depend>
   <run_depend>eigen_conversions</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>ros_datacentre</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>strands_perception_people_msgs</run_depend>
