* New patch file for groundHOG lib to enable setting of parameteres directly without reading them from a text file. * ground_hog now reads parameters from param server * ground_hog now reads model file from param server, saves it to temp and loads it into the groundHOG lib. This is necessary because they do a lot of nasty seeking in the binary file which I cannot completely comprehend yet. I know this is kind of a dirty workaround but it seems to work.

--- a/config/ground_hog.yaml
+++ b/config/ground_hog.yaml
@@ -1,5 +1,6 @@
 ground_hog:
     name: pedestrian
+    model_path: /tmp
     hog_window_width: 64
     hog_window_height: 128
     hog_descritpor_width: 7
