Changing the Logging and PedestrianLocalisation messages to reflect the new structure of the ppl perception

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ add_message_files(
   GroundPlane.msg
   PedestrianTracking.msg
   PedestrianTrackingArray.msg
-  PedestrianLocations.msg
+  PeopleTracker.msg
   HeadOrientations.msg
   Logging.msg
 )
