--- a/strands_upper_body_detector/CMakeLists.txt
+++ b/strands_upper_body_detector/CMakeLists.txt
@@ -4,7 +4,18 @@ project(strands_upper_body_detector)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp cv_bridge sensor_msgs std_msgs strands_perception_people_msgs message_filters geometry_msgs image_transport visualization_msgs)
+find_package(catkin REQUIRED COMPONENTS 
+    roscpp 
+    cv_bridge 
+    sensor_msgs 
+    std_msgs 
+    message_generation
+    message_filters 
+    geometry_msgs 
+    image_transport 
+    visualization_msgs
+    strands_ground_plane
+    )
 
 find_package(Qt4 REQUIRED COMPONENTS QtCore QtGui)
 include(${QT_USE_FILE})
@@ -29,11 +40,10 @@ endif()
 #######################################
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  UpperBodyDetector.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -43,12 +53,12 @@ endif()
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   sensor_msgs#   std_msgs#   strands_perception_people_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+)
 
-###################################
 ## catkin specific configuration ##
 ###################################
 ## The catkin_package macro generates cmake config files for your package
@@ -60,7 +70,7 @@ endif()
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES upper_body_detector
-#  CATKIN_DEPENDS cv_bridge rosccp sensor_msgs std_msgs strands_perception_people_msgs
+#  CATKIN_DEPENDS cv_bridge rosccp sensor_msgs std_msgs 
 #  DEPENDS system_lib
 )
 
@@ -98,7 +108,7 @@ add_executable(upper_body_detector
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(upper_body_detector ${catkin_EXPORTED_TARGETS})
+add_dependencies(upper_body_detector ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(upper_body_detector
