--- a/strands_ground_plane/package.xml
+++ b/strands_ground_plane/package.xml
@@ -17,19 +17,19 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>message_filters</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>strands_perception_people_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>sensor_msgs</build_depend>
 
   <run_depend>message_filters</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>strands_perception_people_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>sensor_msgs</run_depend>
