--- a/strands_perception_people_utils/package.xml
+++ b/strands_perception_people_utils/package.xml
@@ -48,9 +48,13 @@
   <build_depend>mongodb_store</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>strands_perception_people_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf_conversions</build_depend>
+  <build_depend>strands_people_tracker</build_depend>
+  <build_depend>strands_pedestrian_tracking</build_depend>
+  <build_depend>strands_upper_body_detector</build_depend>
+  <build_depend>strands_visual_odometry</build_depend>
   <run_depend>eigen</run_depend>
   <run_depend>eigen_conversions</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -59,9 +63,13 @@
   <run_depend>mongodb_store</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>strands_perception_people_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>tf_conversions</run_depend>
+  <run_depend>strands_people_tracker</run_depend>
+  <run_depend>strands_pedestrian_tracking</run_depend>
+  <run_depend>strands_upper_body_detector</run_depend>
+  <run_depend>strands_visual_odometry</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
