--- a/strands_upper_body_detector/package.xml
+++ b/strands_upper_body_detector/package.xml
@@ -19,21 +19,23 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>strands_perception_people_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>strands_ground_plane</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>strands_perception_people_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>libqt4-dev</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>strands_ground_plane</run_depend>
 
   <export/>
 </package>
