--- a/strands_visual_odometry/package.xml
+++ b/strands_visual_odometry/package.xml
@@ -19,14 +19,14 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>strands_perception_people_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>image_transport</build_depend>
 
   <run_depend>eigen</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>strands_perception_people_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>image_transport</run_depend>
 
   <export/>
